[package]
name = "tstats_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
axum = { version = "0.6" }
axum-macros = "0.3"
dotenvy = "0.15"
log = "0.4"
rand = "0.8"
rosu-v2 = "0.8"
serde = "1.0"
serde_json = "1.0"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-log = { version = "0.1" }
tracing-subscriber = "0.3"
