[workspace]

members = ["model", "server", "proto"]

[package]
name = "tstats_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tstats_backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tracing-subscriber = { version = "0.3" }
server = { path = "server" }
miette = { version = "7.1.0" }
tokio = { version = "1.34", features = ["macros"] }
