[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
sea-orm = { version = "0.12.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = "1.0"
serde_json = "1.0"
utoipa = { version = "3.5.0", features = ["axum_extras", "yaml"] }