[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sqlx = { version = "0.7", features = [
  "macros",
  "postgres",
  "runtime-tokio-rustls",
] }
serde = "1.0"
serde_repr = "0.1"
tracing = "0.1"
