[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }

sea-orm = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sqlx = { version = "0.7", features = ["macros", "postgres", "runtime-tokio-rustls"] }
serde = "1.0"
serde_repr = "0.1"
tracing = "0.1"
