[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.12" }
prost-types = "0.12.4"
tonic = "0.11"
thiserror = "1"
sqlx = { version = "0.7", features = [
  "macros",
  "postgres",
  "runtime-tokio-rustls",
] }

[build-dependencies]
tonic-build = "0.11"
