[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }

deadpool-redis = "0.16"
miette = "7.2"
prost = { version = "0.13" }
prost-types = "0.13"
tonic = "0.12"
thiserror = "1"
rosu-v2 = "0.9"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "macros",
  "postgres",
  "runtime-tokio-rustls",
] }
url = "2.5"

[build-dependencies]
tonic-build = "0.12"
