[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

model = { path = "../model" }
proto = { path = "../proto" }

# REST framework (soon-to-be deleted)
axum = { version = "0.6" }
# Read .env files
dotenvy = "0.15"
# Utilities for working with futures
futures = "0.3.28"
# Convenient error handling
miette = { version = "5.10.0", features = ["fancy"] }
# Protobuf
prost = { version = "0.12" }
# Random
rand = "0.8"
# Redis client
redis = { version = "0.23.3", features = ["tokio-comp", "serde_json", "json"] }
# Osu API connector
rosu-v2 = { version = "0.8", features = ["serialize"] }
# SQL ORM
sea-orm = { version = "0.12.4", features = ["runtime-tokio-rustls"] }
# Serialization/Deserialization
serde = "1.0"
serde_json = "1.0"
# Creating error types conveniently
thiserror = "1.0"
# Async runtime
tokio = { version = "1.33", features = ["rt-multi-thread", "macros", "signal"] }
# gRPC server
tonic = { version = "0.10", features = ["transport"] }
tonic-health = "0.10.2"
tonic-reflection = "0.10"
tonic-web = "0.10"
# HTTP-middleware
tower = "0.4.13"
tower-http = { version = "0.4", features = ["cors", "trace"] }
# Instrumentation and logging
tracing = "0.1"
tracing-log = { version = "0.2" }
# URL-related utilities
url = "2.4.1"
