[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

model = { path = "../model" }
proto = { path = "../proto" }
utils = { path = "../utils"}

deadpool-redis = { version = "0.14.0", features = ["rt_tokio_1"] }
# Read .env files
dotenvy = "0.15"
# Utilities for working with futures
futures = "0.3"
# HTTP utilities
http = "0.2"
# Iterator utilities
itertools = "0.12"
# Convenient error handling
miette = { version = "7.1", features = ["fancy"] }
# Authentication using OAuth2
oauth2 = "4.4"
# Protobuf
prost = { version = "0.12" }
rand = "0.8"
# Redis client
redis = { version = "0.24", features = ["tokio-comp", "serde_json", "json"] }
# Osu API connector
rosu-v2 = { version = "0.8", features = ["serialize"] }
# SQL ORM
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls"] }
# Serialization/Deserialization
serde = "1.0"
serde_json = "1.0"
# Creating error types conveniently
thiserror = "1.0"
# Async runtime
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "signal"] }
# gRPC server
tonic = { version = "0.11", features = ["transport"] }
tonic-health = "0.11"
tonic-reflection = "0.11"
tonic-web = "0.11"
# HTTP-middleware
tower = "0.4.13"
tower-http = { version = "0.4", features = ["cors", "trace"] }
# Instrumentation and logging
tracing = "0.1"
# URL-related utilities
url = "2.5"
urlencoding = "2.1"
reqwest = "0.11"
scrypt = "0.11.0"
rand_chacha = "0.3.1"
base64 = "0.22.0"
aes-gcm = { version = "0.10.3", features = ["std"] }
tonic-middleware = "0.1.3"

[dev-dependencies]
ctor = "0.2.7"
