[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
async-trait = "0.1.79"
base64 = "0.22.0"
deadpool-redis = "0.14.0"
miette = "7.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
redis = { version = "0.25.2", features = ["aio", "tokio-comp"] }
scrypt = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tonic = { version = "0.11.0", default-features = false }
tracing = "0.1.40"

[dev-dependencies]
ctor = "0.2.7"
